Fix overflow-y in site content

--- a/frontend/assets/styles/layout/_layout.scss
+++ b/frontend/assets/styles/layout/_layout.scss
@@ -8,8 +8,7 @@
 
     & > * {
         position: relative;
-        top: 0;
-        bottom: 0;
+        height: 100vh;
         overflow-y: auto;
         border-radius: 0 !important;
     }
